# seff-array

./: .gitignore  README.md  clustered.txt  compare.sh  pyproject.toml  requirements.txt  retrieve.py  sacct  sacct.py  sacctdata.txt  seff-array.py  singlejobtest.txt  test.txt
.circleci/: config.yml
src/seff_array/: cli.py  config.py
tests/: log.txt
tests/data/: array_completed.data  array_mixed.data  array_running.data  single.data  single_failed.data  single_pending.data  single_running.data
tests/output/: array_completed  array_completed.out  array_mixed.out  array_running.out  nonexistent.out  sacct_fail.out  single.out  single_failed.out  single_pending.out  single_running.out  update.sh
